--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^16.13.1",
     "react-bulma-components": "3.3.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "uuid": "^8.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
